--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://puter.com/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Puter.js Examples</title>
+    <title>AI CHAT APP</title>
+  <script src="https://js.puter.com/v2/"></script>
   </head>
   <body>
     <div id="root"></div>
